--- a/musikeyy/base_app/templates/base_app/index.html
+++ b/musikeyy/base_app/templates/base_app/index.html
@@ -74,62 +74,131 @@
         <th scope="col"></th>
         <th scope="col">Song Name</th>
         <th scope="col">Artist Name</th>
+        <th scope="col">Album</th>
         <th scope="col">Duration</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
-      <tr
-        class="table-dark"
-        data-bs-toggle="modal"
-        data-bs-target="#musicmodal"
-      >
+      <tr>
+        {% for song in allSongs %}
         <th scope="row">
           <img
-            src="https://th.bing.com/th/id/R.0c012bed01f69bd578864d66bb166282?rik=BDtXlXljZ3lyKg&pid=ImgRaw&r=0"
+            src="{{song.songThumbnail.url}}"
             width="50px"
             style="border-radius: 100px"
             alt=""
           />
         </th>
-        <td>No role modelz</td>
-        <td>J Cole</td>
-        <td>3:04</td>
+        <td>{{ song.songName }}</td>
+        <td>{{ song.album.artist.artistName }}</td>
+        <td>{{ song.album.albumName }}</td>
         <td>
-          <a>
-            <i class="ri-play-circle-fill ri-2x"></i>
-          </a>
+          <span id="duration{{ forloop.counter }}">Loading...</span>
+          <script>
+            // Function to format duration in mm:ss format
+            function formatDuration(time) {
+              var minutes = Math.floor(time / 60);
+              var seconds = Math.floor(time % 60);
+              var formattedSeconds = seconds < 10 ? "0" + seconds : seconds;
+              return minutes + ":" + formattedSeconds;
+            }
+
+            // Update displayed duration dynamically when the song plays
+            (function () {
+              var audio = new Audio("{{ song.song.url }}");
+              var durationSpan = document.getElementById(
+                "duration{{ forloop.counter }}"
+              );
+
+              audio.addEventListener("loadedmetadata", function () {
+                var duration = audio.duration;
+                durationSpan.textContent = formatDuration(duration);
+
+                setInterval(function () {
+                  if (!audio.paused && audio.currentTime > 0) {
+                    duration -= 1; // Decrease duration by 1 second
+                    durationSpan.textContent = formatDuration(duration);
+                  }
+                }, 1000);
+              });
+            })();
+          </script>
+        </td>
+
+        <td>
+          <h2 class="float-start m-3 mt-0 mb-0 mc-0">
+            <i class="ri-play-circle-fill"></i>
+            <div class="audio-file d-none">
+              <audio controls>
+                <source src="{{song.song.url}}" type="audio/mpeg" />
+                Your browser does not support the audio tag.
+              </audio>
+            </div>
+          </h2>
+          <h2>
+            <a
+              class="table-dark align-items-center text-decoration-none"
+              data-bs-toggle="modal"
+              data-bs-target="#musicmodal{{song.id}}"
+              href="{% url 'viewsong' song.id %}"
+            >
+              <i class="ri-music-line"></i>
+            </a>
+          </h2>
+          <div
+            class="modal"
+            id="musicmodal{{song.id}}"
+            tabindex="-1"
+            aria-labelledby="mymodellabel1"
+            aria-hidden="true"
+            bis_skin_checked="1"
+          >
+            <div class="modal-dialog" role="document" bis_skin_checked="1">
+              <div class="modal-content" bis_skin_checked="1">
+                <div class="modal-header" bis_skin_checked="1">
+                  <h4 class="modal-title"><strong>{{ song.songName }}</strong></h4>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  >
+                    <span aria-hidden="true"></span>
+                  </button>
+                </div>
+                <div class="modal-body" bis_skin_checked="1">
+                  <img
+                    src="{{song.songThumbnail.url}}"
+                    width="400px"
+                    style="border-radius: 20px"
+                    alt=""
+                  />
+                  <p class="mt-4">
+                    Artist: <strong>{{ song.album.artist.artistName }} </strong>
+                  </p>
+                  <p>Album: <strong>{{ song.album.albumName }}</strong></p>
+                </p>
+                <p>Uploaded at : <strong>{{ song.created }}</strong></p>
+                </div>
+                <div class="modal-footer" bis_skin_checked="1">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </td>
       </tr>
+      {% endfor %}
     </tbody>
   </table>
 </div>
 
-{% comment %} song-detail modal {% endcomment %}
-<div class="modal" id="musicmodal" bis_skin_checked="1">
-  <div class="modal-dialog" role="document" bis_skin_checked="1">
-    <div class="modal-content" bis_skin_checked="1">
-      <div class="modal-header" bis_skin_checked="1">
-        <h5 class="modal-title">Modal title</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true"></span>
-        </button>
-      </div>
-      <div class="modal-body" bis_skin_checked="1">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer" bis_skin_checked="1">
-        <button type="button" class="btn btn-primary">Save changes</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-{% comment %} song-detail modal ends{% endcomment %} {% endblock body %}
+{% comment %} song-detail modal {% endcomment %} {% comment %} song-detail modal
+ends{% endcomment %} {% endblock body %}
