added edit feature

--- a/musikeyy/base_app/templates/base_app/base.html
+++ b/musikeyy/base_app/templates/base_app/base.html
@@ -23,12 +23,14 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container-fluid" bis_skin_checked="1">
-        <img
+        <a href="{% url "index" %}"><img
           src="https://i.ibb.co/26QNdQL/black-white-simple-music-logo-500-x-200-px.png"
           alt="Logo"
           border="0"
           width="130px"
+
         />
+      </a>
         <button
           class="navbar-toggler"
           type="button"
