--- a/musikeyy/base_app/templates/base_app/index.html
+++ b/musikeyy/base_app/templates/base_app/index.html
@@ -193,9 +193,35 @@
         </td>
       </tr>
       {% endfor %}
-    </tbody>
-  </table>
-</div>
 
-{% comment %} song-detail modal {% endcomment %} {% comment %} song-detail modal
-ends{% endcomment %} {% endblock body %}
+  </table>
+</tbody>
+{% comment %} pagination {% endcomment %}
+<div bis_skin_checked="1">
+  <ul class="pagination">
+    <li class="page-item disabled">
+      <a class="page-link" href="#">&laquo;</a>
+    </li>
+    <li class="page-item active">
+      <a class="page-link" href="#">1</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="#">2</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="#">3</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="#">4</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="#">5</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="#">&raquo;</a>
+    </li>
+  </ul>
+</div>
+</div>
+{% comment %} pagination {% endcomment %}
+ {% endblock body %}
