--- a/musikeyy/base_app/templates/base_app/add_album.html
+++ b/musikeyy/base_app/templates/base_app/add_album.html
@@ -1,10 +1,10 @@
 {% extends "base_app/base.html" %} 
-{% block title %}Add Artist{% endblock title %}
+{% block title %}Add Album{% endblock title %}
 {% block body %}
 <div class="alert alert-dismissible alert-primary m-5 mt-1" bis_skin_checked="1">
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <strong>Hey !</strong> If you didn't find Desired Artist then <i class="ri-file-add-fill"></i><a href="{% url "add_artist" %}">Add Artist</a> 
-  </div>S
+  </div>
 <h3 class="text-center m-3">Add Album <i class="ri-album-fill"></i></h3>
 
 <div class="d-flex justify-content-center mb-5">
