--- a/musikeyy/base_app/templates/base_app/base.html
+++ b/musikeyy/base_app/templates/base_app/base.html
@@ -72,6 +72,7 @@
                 aria-expanded="false"
                 ><i class="ri-account-pin-circle-fill"></i> Account</a
               >
+              {% if user.is_authenticated %}
               <div class="dropdown-menu" bis_skin_checked="1">
                 <a
                   class="dropdown-item"
@@ -88,10 +89,26 @@
                   ><i class="ri-file-add-fill"></i> Upload Music</a
                 >
                 <div class="dropdown-divider" bis_skin_checked="1"></div>
-                <a class="dropdown-item" href="#"
-                  ><i class="ri-logout-box-r-fill"></i> Logout</a
+                <a class="dropdown-item"
+                  ><form action="{% url 'logout' %}" method="post" class="mt-3">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn--danger">
+                        <i class="ri-logout-box-r-line"></i> Logout
+                    </button>
+                </form></a
                 >
               </div>
+              {% else %}
+              <div class="dropdown-menu" bis_skin_checked="1">
+                <a class="dropdown-item" href="{% url "signup" %}"
+                  ><i class="ri-user-add-fill"></i> </i> Sign Up</a
+                >
+                <div class="dropdown-divider" bis_skin_checked="1"></div>
+                <a class="dropdown-item" href="{% url "login" %}"
+                  ><i class="ri-logout-box-r-fill"></i> Login</a
+                >
+              </div>
+              {% endif %}
             </li>
           </ul>
           <form class="d-flex">
@@ -108,33 +125,28 @@
       </div>
     </nav>
 
-    <div
-      class="offcanvas offcanvas-start"
-      tabindex="-1"
-      id="offcanvasExample"
-      aria-labelledby="offcanvasExampleLabel"
-      bis_skin_checked="1"
-    >
-      <div class="offcanvas-header" bis_skin_checked="1">
-        
-        <div class="profile-container d-flex align-items-center gap-5">
-          <img src="https://avatars.githubusercontent.com/u/110966247?s=400&u=096b73bfaf277bcd4875ec6561bbb4d0be03bd09&v=4" alt="" width="90px"
-          style="border-radius:100px">
-          <div class="user-details">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Pratikx64</h5>
-        <p class="text-white" >A person who loves music.</p>
+    
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header">
+          <div class="profile-container d-flex align-items-center gap-5">
+              {% if user.is_authenticated %}
+              {% comment %} <img src="{{ user_profile.profile_picture.url }}" alt="Profile Picture" width="90px" style="border-radius: 100px;"> {% endcomment %}
+                  <div class="user-details">
+                      <h5 class="offcanvas-title" id="offcanvasExampleLabel"><i class="ri-bug-fill"></i> Hey ! <strong>{{ user.username }} </strong></h5>
+                      <p class="text-white">{{ user_profile.bio }}</p>
+                  </div>
+              {% else %}
+                  <div class="user-details">
+                      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Guest</h5>
+                      <p class="text-white">Welcome, guest!</p>
+                  </div>
+              {% endif %}
+          </div>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-      </div>
-        <button
-          type="button"
-          class="btn-close text-reset"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="offcanvas-body" bis_skin_checked="1">
+      <div class="offcanvas-body">
         <div bis_skin_checked="1">
-          <p>Welcome to your profile <strong>Pratikx64</strong>. Here you can manage your songs , album and the artists. </p>
+          <p>Welcome to your profile Here you can manage your songs , album and the artists. </p>
           <hr>
           <div class="alert alert-dismissible alert-info" bis_skin_checked="1">
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
@@ -150,7 +162,12 @@
           <h5><i class="ri-speak-fill"></i> My Artists</h5>
           <h5><i class="ri-album-fill"></i> My Albums</h5>
           <hr>
-          <button type="button" class="btn btn-outline-danger"><i class="ri-logout-box-r-line"></i> Logout</button>
+          <form action="{% url 'logout' %}" method="post" class="mt-3">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-outline-danger">
+                <i class="ri-logout-box-r-line"></i> Logout
+            </button>
+        </form>
 
         </div>       
       </div>
