--- a/musikeyy/base_app/templates/base_app/index.html
+++ b/musikeyy/base_app/templates/base_app/index.html
@@ -225,8 +225,7 @@
   <div class="card-body" bis_skin_checked="1">
     <p class="card-title text-center">
       <i class="ri-skip-back-fill ri-2x float-start" onclick="playPrevious()"></i>
-Audio Controller
-      {% comment %} <i class="ri-play-circle-fill" onclick="playPause()"></i> {% endcomment %}
+      <i class="ri-play-circle-fill ri-2x"></i> 
       <i class="ri-skip-forward-fill ri-2x float-end" onclick="playNext()"></i>
     </p>
     <div class="audio-controller">
