--- a/musikeyy/base_app/templates/base_app/base.html
+++ b/musikeyy/base_app/templates/base_app/base.html
@@ -184,6 +184,7 @@
         </span>
         <br />
         Source Code : <i class="ri-github-fill"></i>
+        <i>Redirects to github</i>
       </div>
     </footer>
     <script
