--- a/musikeyy/base_app/templates/base_app/base.html
+++ b/musikeyy/base_app/templates/base_app/base.html
@@ -176,11 +176,11 @@
     <footer class="mt-auto mb-4">
       <div class="text-center">
         <span>
-          Copyright &copy;
+          Copyrights &copy;
           <script>
             document.write(new Date().getFullYear());
           </script>
-          Pratik Lamichhane
+          Pratik Lamichhanee
         </span>
         <br />
         Source Code : <i class="ri-github-fill"></i>
